# cs476_project

./: README.md
grayscale/src/: grayscale.c
grayscale/support/include/: pw_dma.h
grayscaleNonDMA/: makefile
grayscaleNonDMA/src/: grayscale.c
grayscaleNonDMA/support/src/: ov7670.c
virtualPrototype/modules/bios/: Makefile  README.md  generic.mk
virtualPrototype/modules/bios/c/: biosOR1420.c  biosOR1420_default.h  biosOld.c  date.h  memTest.c  simBios.c  uartTest.c
virtualPrototype/modules/bios/util/: Makefile  biosgen8k.c
virtualPrototype/modules/bios/verilog/: bios.v  biosRom.v
virtualPrototype/modules/bus_arbiter/verilog/: busArbiter.v  queueMemory.v
virtualPrototype/modules/camera/verilog/: camera.v
virtualPrototype/modules/delay/verilog/: delayIse.v
virtualPrototype/modules/hdmi_720p/font/: ami386__8x8.v
virtualPrototype/modules/hdmi_720p/verilog/: graphicsController.v  hdmi_720p.v  ram2kdp.v  ram4kdp.v  screens.v  textController.v  tmds_encoder.v
virtualPrototype/modules/i2c/verilog/: i2cCustomInstr.v  i2cMaster.v
virtualPrototype/modules/or1420/verilog/: adder.v  dCache.v  dCacheSpm.v  decodeStage.v  executeStage.v  fetchStage.v  logicUnit.v  lutram_32x1.v  memoryStage.v  multiplier.v  or1420Top.v  regiserFile.v  shifter.v  sprUnit.v
virtualPrototype/modules/sdram/verilog/: sdram.v  sdramFifo.v
virtualPrototype/modules/spi/verilog/: spiBus.v  spiShiftQuad.v  spiShiftSingle.v
virtualPrototype/modules/support/verilog/: decimalCounter.v  processorId.v  sram2048x8Dp.v  sram_1024x16_dp.v  sram_16x32_dp_ar.v  sram_32x32_dp_ar.v  sram_512x32.v  sram_512x32_dp.v  (+1 more)
virtualPrototype/programs/mandlebrot/: makefile
virtualPrototype/systems/singleCore/tb/: .gitignore  CMakeLists.txt  Makefile  Makefile.1  Makefile.vsim  README.md  adjust.py  input.vc  log  sc_main.cpp  sim_main.cpp  simpleMemSlave.v  simplePrintSlave.v  tb_harness.v  tb_top.v  transcript  uartdpi.c  uartdpi.h  uartdpi.sv  uartprint.sv  vsim.tcl  vsim_top.v
virtualPrototype/systems/singleCore/tb/logs/: vlt_dump.vcd
(+42 files in other folders)
